--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.2.3",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
+    "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
