--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build",
+    "git-pull": "git add . && git commit -m 'prepull' && git pull origin main"
   },
   "repository": {
     "type": "git",
