--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build",
-    "git-pull": "git add . && git commit -m 'prepull' && git pull origin main"
+    "git-pull": "git add . && git commit -m 'prepull' && git pull origin main && npm run install"
   },
   "repository": {
     "type": "git",
